# snacks-awesome-shortener

./: .dockerignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build_docker.sh  build_linux_musl.sh  build_podman.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker_build.sh  release-please-config.json
.cargo/: config.toml
.github/workflows/: release-please-dev.yaml  release-please.yaml  rust-build.yaml  rust-clippy.yaml
api_gateway/: CHANGELOG.md  Cargo.toml  Dockerfile
api_gateway/src/: config.rs  lib.rs  main.rs  state.rs
common/: CHANGELOG.md  Cargo.toml  build.rs
common/src/: config.rs  db_config.rs  lib.rs  messaging_config.rs  nats_utils.rs  pg_utils.rs  proto.rs  traits.rs
common/src/config/: app_config.rs  config.rs  mod.rs
common/src/models/: create_short_request.rs  created_short_response.rs  get_short_request.rs  mod.rs  mongo_short.rs  persistence_request.rs  short_url.rs
common/src/models/db/: short_url.rs
common/src/models/messaging/: mod.rs
common/src/models/messaging/commands/: create_short_command.rs  mod.rs  persist_short_command.rs  retrieve_short_command.rs
common/src/models/messaging/events/: mod.rs  short_created_event.rs  short_retrieved_event.rs
common/src/models/messaging/request/: get_short_request.rs  mod.rs  persistence_request.rs
common/src/models/messaging/response/: created_short_response.rs
common/src/models/rest/: mod.rs
common/src/models/rest/request/: create_short_request.rs  mod.rs
common_derive/: CHANGELOG.md  Cargo.toml
common_derive/src/: lib.rs
data_persistor/: .env  CHANGELOG.md  Cargo.toml  Dockerfile  config.toml
data_persistor/.sqlx/: query-2823ff723efa172dc2e0f055d9c1c9c10d3e7f640e0f29dbfb0df1620d7e0bff.json  query-f00cd6d35aff0a944adbef0b3555e8a9c701bae9b482628929b9479d87d377f8.json
data_persistor/migrations/: 20260502195239_init.down.sql  20260502195239_init.up.sql
data_persistor/src/: main.rs
db_init/: Dockerfile  db_init.sh
health_service/: Cargo.toml  Dockerfile
kubernetes/: sas-kubernetes.yaml  sas-nats.yaml  sas-postgres.yaml
mongo-init/: create_shorts_user.js
postgres/primary/: pg_hba.conf  postgresql.conf  repl_init.sql
sas_old/: Cargo.toml
shorts_service/: CHANGELOG.md  Cargo.toml  Dockerfile
shorts_service/src/: main.rs
src/: config.rs  lib.rs  main.rs  state.rs
src/handlers/: health_handler.rs  mod.rs  root_handler.rs  short_handler.rs
src/models/: health_response.rs  mod.rs  mongo_short.rs  redis_key.rs  short_request.rs  short_url.rs
src/routes/: health_routes.rs  mod.rs  root_routes.rs  shorts_routes.rs
src/services/: health_service.rs  mod.rs  mongo_service.rs  redis_service.rs  shorts_service.rs
test_tool/: CHANGELOG.md  Cargo.toml
test_tool/src/: main.rs
tests/: integration.rs  integration_tests.rs  redis_service_tests.rs
tests/integration/: api_routes_tests.rs  common.rs  health_tests.rs  mongo_tests.rs  redis_cache_test.rs  redis_cache_tests.rs
tests/load/: test.env  (+1 more)
(+23 files in other folders)
