[package]
name = "snacks-awesome-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
async-std = { version = "1.13", features = ["attributes"] }
anyhow = "1.0.100"
# femme = "2.2.1"
mongodb = { version = "3.4.1"}
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-comp"] }
# redis = { version = "0.32.7", features = ["async-std-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# tide = "0.17.0-beta.1"
tokio = "1.48.0"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
