[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.46.0"
futures-util = "0.3.31"
mongodb = "3.5.1"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
