[package]
name = "common"
version = "2.0.0"
edition = "2024"

[dependencies]
async-nats = "0.49.0"
chrono = "0.4.44"
common_derive = { path = "../common_derive" }
futures-util = "0.3.31"
prost = "0.14.3"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["chrono", "migrate", "postgres", "runtime-tokio"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[build-dependencies]
prost-build = "0.14.3"
